--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.1.7",
     "axios": "^1.2.6",
     "bootstrap": "^5.2.3",
+    "canvasjs": "^1.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
