feat/logoAuth0 login

--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.0.0",
     "@paypal/react-paypal-js": "^7.8.2",
+    "@popperjs/core": "^2.11.6",
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ant": "^0.2.0",
     "antd": "^5.1.7",
     "axios": "^1.2.6",
     "bootstrap": "^5.2.3",
@@ -19,6 +22,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sweetalert2": "^11.7.1",
     "web-vitals": "^2.1.4"
