--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_API_SERVER_URL=http://localhost:3001
 REACT_APP_AUTH0_DOMAIN=dev-fxallu0w705hpbfs.us.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=j1gEtwN2oycK99K2Cu2SVhJDfR4fZVYP
-REACT_APP_AUTH0_CALLBACK_URL=https://pf-museo-front-end.vercel.app/
+REACT_APP_AUTH0_CALLBACK_URL=https://pf-museo-front-end.vercel.app/callback
